[package]
name = "utmp-rs"
description = "Parsing utmp file"
keywords = ["utmp", "linux", "login"]
categories = ["os::unix-apis"]
version = "0.1.2"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/utmp-rs"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
chrono = "0.4.10"
libc = "0.2.66"
utmp-raw = { version = "0.2.0", path = "raw" }
thiserror = "1.0.10"
zerocopy = "0.6"

[workspace]
members = ["raw"]

[dev-dependencies]
anyhow = "1.0.26"
once_cell = "1.3.1"
