[package]
name = "utmp-rs"
description = "Parsing utmp file"
keywords = ["utmp", "linux", "login"]
categories = ["os::unix-apis"]
version = "0.3.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/utmp-rs"
readme = "README.md"
edition = "2018"
license = "MIT"

[dependencies]
time = "0.3"
libc = "0.2.66"
utmp-raw = { version = "0.3.0", path = "raw" }
thiserror = "1.0.10"
zerocopy = "0.6"

[workspace]
members = ["raw"]

[dev-dependencies]
anyhow = "1.0.26"
once_cell = "1.3.1"

[package.metadata.docs.rs]
default-target = "x86_64-unknown-linux-gnu"
targets = ["aarch64-unknown-linux-gnu"]
