[package]
name = "utmp-raw"
description = "Provides raw types for parsing login records in utmp file"
keywords = ["utmp", "linux", "login"]
categories = ["os::unix-apis"]
version = "0.2.0"
authors = ["Xidorn Quan <me@upsuper.org>"]
repository = "https://github.com/upsuper/utmp-rs"
edition = "2018"
license = "MIT"

[lib]
path = "lib.rs"

[[example]]
name = "dump-utmp"
path = "dump_utmp.rs"

[dependencies]
cfg-if = "1.0.0"
libc = "0.2.66"
zerocopy = "0.6"
